--- a/src/index.html
+++ b/src/index.html
@@ -83,9 +83,8 @@
     <header>
         <div class="widewrapper masthead">
             <div class="container">
-                <a href="index.html" id="logo<a class="scheme" href="#styles-dark-yellow"><img src="img/demo/darkYellow.png" alt="Blue Green" class="img-responsive"></a>
-                </di">
-                    <%=name%>
+                <a href="index.html" id="logo">
+                    <%=name%> 
                     <!--Use the following line instead if you want to use an image logo-->
                     <!--<img src="img/tales-logo.png" alt="Tales Blog">-->
                 </a>
