removidos arquivos desnecessário e preparado primeiro post

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                                 <header>
                                     <img src="<%=posts[i].image%>" alt="<%=posts[i].name%>" class="img-responsive">
                                     <h3><a href="<%=posts[i].url%>"><%=posts[i].name%></a></h3>
-                                    <span class="meta">24 July 2013, Alexander Rechsteiner</span>
+                                    <span class="meta"><%=posts[i].date%>, <%=posts[i].author%></span>
                                     <hr>
                                 </header>
                                 <div class="body">
